--- a/ICICONSOLEGPT/pyproject.toml
+++ b/ICICONSOLEGPT/pyproject.toml
@@ -5,8 +5,8 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ICICONSOLE-GPT"
-version = "0.0.2"
+name = "ICICONSOLEGPT"
+version = "0.0.5"
 description = "GPT Powered Command-line Interface tailored to working with Neo4j Knowledge Graph Databses hosted via Tapis Pods."
 readme = "README.md"
 authors = [{ name = "Sahil Samar", email = "sahilsamar031@gmail.com" }]
@@ -33,5 +33,5 @@ dev = []
 [project.urls]
 Homepage = "https://github.com/AD1616/ICICONSOLE/tree/main/ICICONSOLE_GPT"
 
-[project.entry-points."ICICONSOLE-GPT.__main__"]
-tomatoes = "ICICONSOLE-GPT:__main__"
+[project.entry-points."ICICONSOLEGPT.__main__"]
+tomatoes = "ICICONSOLEGPT:__main__"
