--- a/ICICONSOLEGENRIC/pyproject.toml
+++ b/ICICONSOLEGENRIC/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "tapipy",
     "py2neo",
     "pandas",
-    "datascroller"
+    "datascroller",
+    "openai"
 ]
 
 requires-python = ">=3.10"
